[gd_scene load_steps=3 format=3 uid="uid://g1sxxuwbs7rl"]

[ext_resource type="Script" path="res://Scenes/Levels/explosion.gd" id="1_h00pg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13q47"]
radius = 500.0

[node name="Explosion" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_h00pg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_13q47")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
